ADD_LIBRARY(RESTc STATIC SHARED
            RESTc.c
            RESTc_Class.c
            RESTc_cURLRequestor.c
            RESTc_Authenticator.c
            RESTc_HashTable.c
            RESTc_JSONProcessor.c
            RESTc_OAuth2Authenticator.c
            RESTc_OAuth2Service.c
            RESTc_Processor.c
            RESTc_ResponseStub.c
            RESTc_Request.c
            RESTc_Requestor.c
            RESTc_String.c
            RESTc_StringConst.c
            RESTc_StringBucket.c
           )
